# bayesian-modeling-computation-python

./: .gitignore  README.md  jupytext.toml  pyproject.toml  tasks.py
notebooks/: 11_probability_background.ipynb  11_probability_background.md  1_bayesian_inference.ipynb  1_bayesian_inference.md  2_exploratory_analysis_of_bayesian_models.ipynb  2_exploratory_analysis_of_bayesian_models.md  3_linear_models_and_probabalistic_programming_languages.ipynb  3_linear_models_and_probabalistic_programming_languages.md  4_extending_linear_models.ipynb  4_extending_linear_models.md  5_splines.ipynb  5_splines.md  6_time_series.ipynb  6_time_series.md
notebooks/11/: probability_background.ipynb  probability_background.md
