[tool.poetry]
name = "bayesian-modeling-computation-python"
version = "0.1.0"
description = ""
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pymc3 = "^3.11.5"
arviz = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
