[tool.poetry]
name = "bayesian-modeling-computation-python"
version = "0.1.0"
description = ""
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pymc3 = "^3.11.5"
arviz = "^0.12.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
tensorflow = "^2.8.0"
tensorflow-probability = "^0.16.0"
bambi = "^0.7.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
